<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="br.com.futusteps.survey.ui.questions.QuestionsActivity">

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cpfTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/birthDateTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cpfTil"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/birthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birth_date"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/prefixTil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthDateTil"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prefix"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prefix"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneTil"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/birthDateTil"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_toEndOf="@+id/prefixTil"
                android:layout_toRightOf="@+id/prefixTil"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="45557888" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/phoneTypeTil"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/birthDateTil"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phoneType"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:bufferType="normal"
                    android:focusable="false"
                    android:hint="@string/phone_type"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/salaryTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phoneTil"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/salary"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:layout_marginTop="16dp"
                android:id="@+id/finishButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:layout_below="@+id/salaryTil"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </ScrollView>
</LinearLayout>
